fix: z-index in KV, desktop

--- a/3337875904513/style/styles.css
+++ b/3337875904513/style/styles.css
@@ -706,6 +706,7 @@
 @media screen and (min-width: 700px) {
   #es-cerave.es-cerave .es-kv {
     position: relative;
+    z-index: 0;
   }
 
   #es-cerave.es-cerave .es-kv__bg {
